chore(server): add noop build script for Render

--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "ReelForge API Server",
   "main": "server.js",
   "scripts": {
+    "build": "echo 'no build step for server'",
     "start": "node server.js",
     "dev": "node server.js"
   },
